k8s/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery
          image: ghcr.io/jeammm/archery-backend:54e9067
          command:
            - celery
            - -A
            - run.celery
            - worker
            - --loglevel=info
